--- a/arch/arm64/configs/k57pv1_dm_64_defconfig
+++ b/arch/arm64/configs/k57pv1_dm_64_defconfig
@@ -555,3 +555,4 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+# CONFIG_MTK_WAPI_SUPPORT is not set
