--- a/arch/arm64/configs/marino_defconfig
+++ b/arch/arm64/configs/marino_defconfig
@@ -559,6 +559,7 @@ CONFIG_FRAME_WARN=1400
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=1
+# CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
