--- a/arch/arm/configs/brady_defconfig
+++ b/arch/arm/configs/brady_defconfig
@@ -565,6 +565,7 @@ CONFIG_FRAME_WARN=1400
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=1
+# CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
