--- a/arch/arm64/configs/marino_debug_defconfig
+++ b/arch/arm64/configs/marino_debug_defconfig
@@ -271,7 +271,7 @@ CONFIG_MTK_SYNC=y
 CONFIG_MTK_VIDEOCODEC_DRIVER=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
-CONFIG_MTK_AAL_SUPPORT=y
+#CONFIG_MTK_AAL_SUPPORT is not set
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSORS_1_0=y
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
