Add missed DM verify feature
Change-Id: Ic798016ede6603834dc25f81928900f50416ac0b
Reviewed-on: https://gerrit.mot.com/1129899
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Shengchun Li <lisc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm/boot/dts/mt6757.dts
+++ b/arch/arm/boot/dts/mt6757.dts
@@ -3856,7 +3856,11 @@
 					dev = "/dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/system";
 					type = "ext4";
 					mnt_flags = "ro";
-					fsmgr_flags = "wait";
+                                        #ifndef CONFIG_MTK_DM_VERITY_OFF
+                                        fsmgr_flags = "wait,verify";
+                                        #else
+                                        fsmgr_flags = "wait";
+                                        #endif
 				};
 #endif
 #ifndef CONFIG_MTK_LATE_MOUNT
