lisbon: input add ili7087 touch driver.
input touch add ilitek
driver for lisbon

Change-Id: I8b7a41e3f39221bb5d9885d0333027e8c7a5c2ac
Signed-off-by: tanhua1 <tanhua1@mt.com>
Reviewed-on: https://gerrit.mot.com/1868263
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wei Deng <dengwei1@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/mediatek/Kconfig
+++ b/drivers/input/touchscreen/mediatek/Kconfig
@@ -166,6 +166,14 @@ config TOUCHSCREEN_MTK_GT9157
 	  To compile this dirver as a module, choose M here: the
 	  module will be called
 
+config TOUCHSCREEN_MTK_ILI7807
+        bool "Ili7807 for Mediatek package"
+        default n
+        help
+          Say Y here if you have Ili7807 touch panel.
+
+          if unsure, say N.
+
 source "drivers/input/touchscreen/mediatek/GT9157/Kconfig"
 
 endif
