asoc:add aw882xx driver
Merge code from ODM;
For evb bringup.

Change-Id: Ic6d5cf7e4bff2f7fe046c0f44d6da55c77645271
Signed-off-by: yaozm1 <yaozm1@mt.com>
Reviewed-on: https://gerrit.mot.com/1869844
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -495,6 +495,8 @@ obj-$(CONFIG_SND_SOC_RT5509)	+= snd-soc-rt5509.o
 obj-$(CONFIG_SND_SOC_MT6660)	+= snd-soc-mt6660.o
 obj-$(CONFIG_SND_SOC_AW87339)	+= aw87339/
 
+#for AWINIC AW882XX Smart PA
+obj-$(CONFIG_SND_SMARTPA_AW882XX) += awinic/
 ifeq ($(CONFIG_SND_SOC_MT6358),y)
   MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
   subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include
