--- a/drivers/misc/mediatek/flashlight/Kconfig
+++ b/drivers/misc/mediatek/flashlight/Kconfig
@@ -180,3 +180,14 @@ config MTK_FLASHLIGHT_DLPT
 	  the current of battary dynamicly. It will start by request
 	  and notice user by kernel notifier.
 
+config MTK_FLASHLIGHT_LISBON
+	tristate "Mediatek flashlight with driver IC (Mediatek MT6360) for lisbon"
+	depends on MTK_FLASHLIGHT && RT_FLASHLIGHT
+	help
+	  This is for the flashlight driver IC (Mediatek MT6360)  for lisbon.
+
+	  Say Y here if you want a flashlight driver IC MT6360.
+	  Select this only if your board has this IC.
+
+	  Say M here if you want to compile this driver as a module.
+
