--- a/arch/arm64/boot/dts/mediatek/mt6853.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6853.dts
@@ -6798,3 +6798,6 @@ page_owner=on loop.max_part=7";
 #ifdef CONFIG_MTK_ENABLE_GENIEZONE
 #include "mediatek/trusty.dtsi"
 #endif
+
+/* Motorola base dts override */
+#include "mediatek/mt6853-moto-base.dtsi"
