kernel/touch: add FT3518U initial touch driver
kernel/touch:
Add FT3518U initial touch driver.

Change-Id: I9d35e656a81302e87582cfda0120705faded2c56
Signed-off-by: wangyq13 <wangyq13@mt.com>
Reviewed-on: https://gerrit.mot.com/1885364
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Hongshu Lou <louhs1@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/mediatek/Makefile
+++ b/drivers/input/touchscreen/mediatek/Makefile
@@ -23,3 +23,4 @@ obj-$(CONFIG_TOUCHSCREEN_HIMAX_I2C)	+=  hxchipset/
 obj-$(CONFIG_TOUCHSCREEN_MTK_FOCALTECH_FHD)	+=  focaltech_fhd_touch/
 obj-$(CONFIG_TOUCHSCREEN_MTK_GT9157)    +=  GT9157/
 obj-$(CONFIG_TOUCHSCREEN_MTK_ILI7807)	+=  Ilitek7807/
+obj-$(CONFIG_TOUCHSCREEN_FT3518U)	+=  FT3518U/
