kyoto: bringup camera
1. kernel define all sensor
2. modify build rule
3. add mot define file

Change-Id: I33901c83c403d00a9cb6d389cafea46547c24423
Signed-off-by: Qiang Guo <guoqiang8@mt.com>
Reviewed-on: https://gerrit.mot.com/1887001
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dawei Wang <wangdw10@motorola.com>
Reviewed-by: Wang Liu <liuwang2@mt.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Reviewed-by: Shanghui Zhang <zhangsh@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/cam_cal/src/mt6853/Makefile
+++ b/drivers/misc/mediatek/cam_cal/src/mt6853/Makefile
@@ -15,7 +15,12 @@ MTK_CUSTOM_PATH := $(srctree)/drivers/misc/mediatek
 MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
 CAM_CAL_SRC_PATH := $(MTK_CUSTOM_PATH)/cam_cal/src
 CAM_CAL_PLATFORM_SRC_PATH := $(CAM_CAL_SRC_PATH)/$(MTK_PLATFORM)
+ifeq ($(CONFIG_ARCH_MOTO_PROJECT),)
 ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MTK_PROJECT))
+else
+ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MOTO_PROJECT))
+ccflags-y += -D$(MTK_PLATFORM) -D$(ARCH_MTK_PROJECT)
+endif
 COMMON_VERSION := v2
 
 subdir-ccflags-y += -I$(MTK_CUSTOM_PATH)/imgsensor/inc \
@@ -33,7 +38,6 @@ obj-y += ../common/$(COMMON_VERSION)/eeprom_utils.o
 # Platform code
 obj-y += eeprom_i2c_custom_driver.o
 
-
 define INC_CUSTOM_SRC
 ifeq ($(wildcard $(CAM_CAL_PLATFORM_SRC_PATH)/camera_project/$(ARCH_MTK_PROJECT)/$(1).c),)
 obj-y += $(1).o
@@ -43,5 +47,6 @@ endif
 endef
 
 # Project or platform code
-CUSTOM_SRC_LIST := cam_cal_list
+CUSTOM_SRC_LIST := cam_cal_list custom_eeprom_driver
 $(foreach src,$(CUSTOM_SRC_LIST),$(eval $(call INC_CUSTOM_SRC,$(src))))
+ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MTK_PROJECT))
