--- a/drivers/misc/mediatek/imgsensor/src/mt6853/Makefile
+++ b/drivers/misc/mediatek/imgsensor/src/mt6853/Makefile
@@ -14,7 +14,13 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
+
+ifeq ($(CONFIG_ARCH_MOTO_PROJECT),)
 ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MTK_PROJECT))
+else
+ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MOTO_PROJECT))
+ccflags-y += -D$(MTK_PLATFORM) -D$(ARCH_MTK_PROJECT)
+endif
 IMGSENSOR_DRIVER_PATH  := $(srctree)/drivers/misc/mediatek/imgsensor/src
 MTK_DRIVER_PATH  := $(srctree)/drivers/misc/mediatek
 COMMON_VERSION := v1_1
@@ -28,9 +34,18 @@ obj-y				+= ../common/$(COMMON_VERSION)/imgsensor_hw.o
 obj-y				+= ../common/$(COMMON_VERSION)/imgsensor_i2c.o
 obj-y				+= ../common/$(COMMON_VERSION)/imgsensor_legacy.o
 obj-y				+= ../common/$(COMMON_VERSION)/imgsensor_proc.o
+ifeq ($(CONFIG_ARCH_MOTO_PROJECT),)
 obj-y				+= ../common/$(COMMON_VERSION)/imgsensor_sensor_list.o
+else
+obj-y				+= ./camera_project/$(ARCH_MTK_PROJECT)/imgsensor_sensor_list.o
+endif
 obj-y				+= ../common/$(COMMON_VERSION)/seninf.o
+ifeq ($(CONFIG_ARCH_MOTO_PROJECT),)
 obj-y				+= ../common/$(COMMON_VERSION)/imgsensor_pwr_seq.o
+else
+obj-y				+= ./camera_project/$(ARCH_MTK_PROJECT)/imgsensor_pwr_seq.o
+endif
+
 define FILTER_DRV
 ifeq ($(wildcard $(IMGSENSOR_DRIVER_PATH)/$(MTK_PLATFORM)/camera_project/$(ARCH_MTK_PROJECT)/$(1)),)
 ifeq ($(wildcard $(IMGSENSOR_DRIVER_PATH)/$(MTK_PLATFORM)/$(1)),)
@@ -53,6 +68,9 @@ endif
 
 $(info imgsensor drv by platform $(project_drv))
 
+ifneq ($(ARCH_MTK_PROJECT),)
+obj-y				+= $(project_drv)
+endif
 obj-y				+= $(platform_drv)
 ifeq (,$(wildcard $(IMGSENSOR_DRIVER_PATH)/$(MTK_PLATFORM)/camera_project/$(ARCH_MTK_PROJECT)/camera_hw))
 subdir-ccflags-y		+= -I$(IMGSENSOR_DRIVER_PATH)/$(MTK_PLATFORM)/camera_hw
@@ -61,11 +79,17 @@ ifneq ($(project_drv),)
 obj-y				+= camera_project/$(ARCH_MTK_PROJECT)/
 endif
 else
+ifeq ($(CONFIG_ARCH_MOTO_PROJECT),)
 obj-y				+= camera_project/$(ARCH_MTK_PROJECT)/
+else
+obj-y				+= camera_project/$(ARCH_MTK_PROJECT)/camera_hw/
+endif
 subdir-ccflags-y		+= -I$(IMGSENSOR_DRIVER_PATH)/$(MTK_PLATFORM)/camera_project/$(ARCH_MTK_PROJECT)/camera_hw
 subdir-ccflags-y		+= -I$(IMGSENSOR_DRIVER_PATH)/$(MTK_PLATFORM)/camera_hw
 endif
 subdir-ccflags-y		+= -I$(IMGSENSOR_DRIVER_PATH)/common/$(COMMON_VERSION)/camera_hw
+
+ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MOTO_PROJECT))
 
 # Enable parallelism
 subdir-ccflags-y += -DSENSOR_PARALLEISM
