lisbon: enable main3 camera otp
enable main3 camera otp.

config AWB/LSC data of main3 camera.

Change-Id: I8c89349c6945b3e316f72096eb7fd8e177e36751
Reviewed-on: https://gerrit.mot.com/1889319
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Reviewed-by: Heng Chen <chenheng3@mt.com>
Reviewed-by: Shanghui Zhang <zhangsh@motorola.com>
Reviewed-by: Qiang Guo <guoq8@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/imgsensor/Kconfig
+++ b/drivers/misc/mediatek/imgsensor/Kconfig
@@ -4,6 +4,12 @@ config MTK_IMGSENSOR
 	help
 	  CONFIG_MTK_IMGSENSOR
 
+config PROJECT_LISBON
+	bool CONFIG_PROJECT_LISBON
+	default n
+	help
+	  CONFIG_PROJECT_LISBON
+
 source "drivers/misc/mediatek/imgsensor/src/Kconfig"
 config ARCH_MOTO_PROJECT
 	string CONFIG_ARCH_MOTO_PROJECT
