--- a/drivers/misc/mediatek/thermal/common/thermal_zones/Makefile
+++ b/drivers/misc/mediatek/thermal/common/thermal_zones/Makefile
@@ -477,7 +477,9 @@ obj-$(CONFIG_THERMAL) += mtk_ts_pa_thput.o
 obj-$(CONFIG_THERMAL) += mtk_ts_pmic.o
 obj-$(CONFIG_THERMAL) += mtk_ts_charger.o
 #obj-$(CONFIG_THERMAL) += mtk_ts_charger2.o
-
+obj-$(CONFIG_THERMAL) += mtk_ts_bqtherm.o
+obj-$(CONFIG_THERMAL) += mtk_ts_wtcharger.o
+obj-$(CONFIG_THERMAL) += mtk_ts_btstypc.o
 
 ifneq ($(CONFIG_MTK_COMBO_WIFI),)
     obj-$(CONFIG_THERMAL) += mtk_ts_wmt.o
