--- a/arch/arm64/boot/dts/mediatek/mt6785.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6785.dts
@@ -4428,6 +4428,9 @@ page_owner=on loop.max_part=7";
 	 *	};
 	 *};
 	 */
+	swtp:swtp@{
+		compatible = "mediatek, swtp-eint";
+	};
 
 	mt6359_gauge {
 		compatible = "mediatek,mt6359_gauge";
