lisbon: distinguish SWTP on factory and customer version
1 From RF,SWTP should be disabled/enabled on factory/customer version.

2 In order to keep only one modem img for both versions, got one method
    from MTK at ALPS05657359,when DTS/DWS is configured and modem SWTP is
    enabled, swtp ccci do not care cable in or out and sent no TX power.

3 For factory version, add SWTP_FACTORY definition for MTK patch.

4 For customer version, lisbon keep MTK default code logic, add
    SWTP_USERDEBUG definition to avoid the effect to Kyoto.

5 RF test ok with temp factory/userdebug build.

Change-Id: Ia4730aec312dd22c925b4474a1ac7e008c8f6117
Reviewed-on: https://gerrit.mot.com/1919733
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Shengqi Wang <wangsq2@motorola.com>
Reviewed-by: Huachun Zhang <zhanghc3@mt.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/port/Makefile
+++ b/drivers/misc/mediatek/eccci/port/Makefile
@@ -42,3 +42,11 @@ else
 obj-  := dummy.o # avoid build error
 endif
 
+ifeq ($(TARGET_PRODUCT),lisbon_factory)
+ccflags-y += -DSWTP_FACTORY
+endif
+
+ifeq ($(TARGET_PRODUCT),lisbon_retail)
+ccflags-y += -DSWTP_CUSTOMER
+endif
+
