lisbon: Add KYOTO_SWTP_CUST for kyoto, DISABLE_SWTP_FACTORY for lisbon factory
1 Add KYOTO_SWTP_CUST definition for kyoto special swtp logic.
2 Add DISABLE_SWTP_FACTORY definition for lisbon factory, keep MTK default logic for lisbon customer version.

Change-Id: Ied02b259bded3199f24ddf3b65a19d471ecc5613
Reviewed-on: https://gerrit.mot.com/1920880
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shengqi Wang <wangsq2@motorola.com>
Reviewed-by: Huachun Zhang <zhanghc3@mt.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/port/Makefile
+++ b/drivers/misc/mediatek/eccci/port/Makefile
@@ -41,12 +41,12 @@ ccci_port-y += ccci_swtp.o
 else
 obj-  := dummy.o # avoid build error
 endif
+# Add for Kyoto special swtp logic
+ifneq (,$(findstring kyoto, $(strip $(TARGET_PRODUCT))))
+ccflags-y += -DKYOTO_SWTP_CUST
+endif
 
+# Disable SWTP on factory version for lisbon, keep MTK default logic for customer version
 ifeq ($(TARGET_PRODUCT),lisbon_factory)
-ccflags-y += -DSWTP_FACTORY
+ccflags-y += -DDISABLE_SWTP_FACTORY
 endif
-
-ifeq ($(TARGET_PRODUCT),lisbon_retail)
-ccflags-y += -DSWTP_CUSTOMER
-endif
-
