arm/dt: kyoto: set the bit  width of backligt to 11bits
The bit  width of backligt is 11bits.So we set the max bright to 2047.
That support high accuracy auto-brightness.

Change-Id: I08cf18095940aaa4dc92f8512a626bd1a4cbd917
Signed-off-by: wangyq13 <wangyq13@mt.com>
Reviewed-on: https://gerrit.mot.com/1927964
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yiwen Liu <liuyw2@motorola.com>
Reviewed-by: Hongshu Lou <louhs1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6853-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6853-moto-base.dtsi
@@ -8,6 +8,13 @@
 	moto_chg_tcmd: moto_chg_tcmd {
 	};
 
+	disp_leds {
+		backlight {
+			max-brightness = <2047>;
+			led-bits = <11>;
+		};
+	};
+
         msdc1_ins:msdc1_ins {
         };
 
