--- a/drivers/input/touchscreen/mediatek/Makefile
+++ b/drivers/input/touchscreen/mediatek/Makefile
@@ -24,4 +24,5 @@ obj-$(CONFIG_TOUCHSCREEN_MTK_FOCALTECH_FHD)	+=  focaltech_fhd_touch/
 obj-$(CONFIG_TOUCHSCREEN_MTK_GT9157)    +=  GT9157/
 obj-$(CONFIG_TOUCHSCREEN_MTK_ILI7807)	+=  Ilitek7807/
 obj-$(CONFIG_TOUCHSCREEN_FT3518U)	+=  FT3518U/
+obj-$(CONFIG_TOUCHSCREEN_FT3519)        +=  FT3519/
 obj-$(CONFIG_TOUCHSCREEN_GOODIX_GTX8)    +=  goodix-ts-sunrise/
