asoc: add fs16xx driver
changes:
add fs16xx driver

Change-Id: I6a83c04f3c204a2aed42af94de6f64a9b2aa5cb1
Signed-off-by: guoyf2 <guoyf2@mt.com>
Reviewed-on: https://gerrit.mot.com/1960575
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yunfei Guo <guoyf2@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1246,4 +1246,10 @@ config SND_SOC_RT5509
 	depends on I2C
 	select RT_REGMAP
 
+config SND_SOC_FS16XX
+	tristate "Support fs16xx/fs16xx"
+	depends on I2C
+	help
+	  FourSemi Smart Amplifier Driver
+
 endmenu
