--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -495,6 +495,9 @@ obj-$(CONFIG_SND_SOC_RT5509)	+= snd-soc-rt5509.o
 obj-$(CONFIG_SND_SOC_MT6660)	+= snd-soc-mt6660.o
 obj-$(CONFIG_SND_SOC_AW87339)	+= aw87339/
 
+#for Foursemi FS16XX Smart PA
+obj-$(CONFIG_SND_SOC_FS16XX) +=foursemi/
+
 #for AWINIC AW882XX Smart PA
 obj-$(CONFIG_SND_SMARTPA_AW882XX) += awinic/
 ifeq ($(CONFIG_SND_SOC_MT6358),y)
