corfu: add camera for mainline
add corfu camera
for mainline

Change-Id: Ie93d1ac32f974d1c4e4e1e173002e904ee7ba156
Signed-off-by: lugang <lugang@longcheer.com>
Reviewed-on: https://gerrit.mot.com/1965129
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shanghui Zhang <zhangsh@motorola.com>
Reviewed-by: Qiang Guo <guoq8@motorola.com>
Reviewed-by: Heng Chen <chenheng3@mt.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/lens/main/Makefile
+++ b/drivers/misc/mediatek/lens/main/Makefile
@@ -16,7 +16,11 @@
 #
 
 MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
+ifeq ($(CONFIG_ARCH_MOTO_PROJECT),)
 ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MTK_PROJECT))
+else
+ARCH_MTK_PROJECT := $(subst ",,$(CONFIG_ARCH_MOTO_PROJECT))
+endif
 
 MTK_CUSTOM_PATH  := $(srctree)/drivers/misc/mediatek
 
@@ -31,6 +35,9 @@ else
   subdir-ccflags-y += -I$(MTK_CUSTOM_PATH)/lens/main/common/bu63169af/inc
 endif
 
+ifneq ($(wildcard $(MTK_CUSTOM_PATH)/lens/main/$(ARCH_MTK_PROJECT)),)
+obj-y += $(ARCH_MTK_PROJECT)/
+else
 ifeq ($(CONFIG_MTK_LENS_USE_MODULE), y)
 
 MAIN_CFILES += main_lens.c
@@ -119,5 +126,5 @@ else
 endif
 obj-y  += common/bu64253gwzaf/
 obj-y  += common/mot_dw9800vaf/
-
+endif
 endif
