--- a/drivers/misc/mediatek/flashlight/Kconfig
+++ b/drivers/misc/mediatek/flashlight/Kconfig
@@ -191,3 +191,14 @@ config MTK_FLASHLIGHT_LISBON
 
 	  Say M here if you want to compile this driver as a module.
 
+config MTK_FLASHLIGHT_CORFU_GPIO
+	tristate "Mediatek flashlight corfu gpio driver"
+	depends on MTK_FLASHLIGHT
+	help
+	  This is flashlight corfu gpio driver for camera.
+
+	  Say Y here if you want a corfu driver IC with GPIO interface.
+	  Select this only if your board has this IC.
+
+	  Say M here if you want to compile this driver as a module.
+
