--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -1415,6 +1415,10 @@ defined(CONFIG_MTK_CAM_SECURITY_SUPPORT)
 		compatible = "mediatek,pmic-accdet";
 	};
 
+	swtp:swtp@{
+		compatible = "mediatek, swtp-eint";
+	};
+
 	mt6358_gauge {
 		compatible = "mediatek,mt6358_gauge";
 		gauge_name = "gauge";
