Corfu: Enable i2c debugGing.
HW team asking for CCI like tools that can access camera sensor/AF/OIS register
online, linux kernel has such debugGing tool, this change is for enable the
debugGing interface.

Change-Id: Ia1efbe79f44f7f0bc0286f7174a5ae3bdbbe9f94
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2007693
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Xu Ji <jixu@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/debug-k69v1_64-coful.config
+++ b/arch/arm64/configs/ext_config/debug-k69v1_64-coful.config
@@ -1,5 +1,6 @@
 CONFIG_ARCH_MOTO_PROJECT="coful"
 CONFIG_AF_NOISE_ELIMINATION=y
+CONFIG_I2C_CHARDEV=y
 
 # CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_DEBUG_PAGEALLOC_ENABLE_DEFAULT is not set
