aw883xx driver: add milan aw883xx drivers
Changes:
Add milan audio smartpa aw883xx driver

Change-Id: I74452edd59e453088fac387e209ac11d51db4a37
Signed-off-by: longch64 <longch64@motorola.com>
Reviewed-on: https://gerrit.mot.com/2022889
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1246,4 +1246,10 @@ config SND_SOC_RT5509
 	depends on I2C
 	select RT_REGMAP
 
+config SND_SOC_AW883XX
+    tristate "SoC Audio for awinic aw883xx series"
+    depends on I2C
+    help
+      This option enables support for aw883xx series Smart PA.
+
 endmenu
