--- a/arch/arm64/configs/ext_config/debug-k69v1_64-coful.config
+++ b/arch/arm64/configs/ext_config/debug-k69v1_64-coful.config
@@ -1,5 +1,6 @@
 CONFIG_ARCH_MOTO_PROJECT="coful"
 CONFIG_AF_NOISE_ELIMINATION=y
+CONFIG_SEPERATE_VOLT_FORLONGVIB=y
 CONFIG_I2C_CHARDEV=y
 
 # CONFIG_DEBUG_PAGEALLOC is not set
