--- a/arch/arm64/configs/ext_config/moto-k69v1_64-coful.config
+++ b/arch/arm64/configs/ext_config/moto-k69v1_64-coful.config
@@ -18,6 +18,7 @@ CONFIG_SND_SOC_FS16XX=y
 CONFIG_MTK_FINGERPRINT_SUPPORT=y
 CONFIG_ARCH_MOTO_PROJECT="coful"
 CONFIG_AF_NOISE_ELIMINATION=y
+CONFIG_SEPERATE_VOLT_FORLONGVIB=y
 
 CONFIG_THERMAL_CP_SUPPORT=y
 # CONFIG_MTK_PUMP_EXPRESS_PLUS_20_SUPPORT is not set
