--- a/drivers/misc/mediatek/flashlight/Makefile
+++ b/drivers/misc/mediatek/flashlight/Makefile
@@ -15,6 +15,7 @@ obj-$(CONFIG_MTK_FLASHLIGHT_RT4505)      += flashlights-rt4505.o
 obj-$(CONFIG_MTK_FLASHLIGHT_RT5081)      += flashlights-rt5081.o
 obj-$(CONFIG_MTK_FLASHLIGHT_MT6336)      += flashlights-mt6336.o
 obj-$(CONFIG_MTK_FLASHLIGHT_MT6370)      += flashlights-mt6370.o
+obj-$(CONFIG_MTK_FLASHLIGHT_OCP81373)    += flashlights-ocp81373.o
 ifeq ($(CONFIG_MTK_FLASHLIGHT_LISBON), y)
   obj-y  += mot-lisbon-flashlights-mt6360.o
 else
