Milan: s5k4h7 AF bringup [4/4]
[Detail]
s5k4h7 AF bringup

Change-Id: I60227eef7abf792637eb07346179d9e2fe5515c2
Signed-off-by: shendeguo <shendeguo@longcheer.com>
Reviewed-on: https://gerrit.mot.com/2025632
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: <longch69@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/lens/main3/Makefile
+++ b/drivers/misc/mediatek/lens/main3/Makefile
@@ -41,6 +41,6 @@ obj-y += main3_lens.o
 obj-y += common/bu24253af/
 obj-y += common/gt9772af/
 obj-y += common/mot_dw9714vaf/
-
+obj-y += common/dw9714af/
 
 endif
