Milan change code for hp impendance in kernel by mtk advice
WHY:milan:need hp impendance
HOW:in order to using hp impendance,
we need to change code in mt6358.c by mtk advice.
this change provides by MTK.


Change-Id: Ib0a5aa652b65210836ab44e4416841576a783e14
Signed-off-by: longch64 <longch64@motorola.com>
Reviewed-on: https://gerrit.mot.com/2027886
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -497,6 +497,10 @@ obj-$(CONFIG_SND_SOC_AW87339)	+= aw87339/
 obj-$(CONFIG_SND_SOC_AW883XX)	+= aw883xx/
 #for AWINIC AW882XX Smart PA
 obj-$(CONFIG_SND_SMARTPA_AW882XX) += awinic/
+# Add for  hp impendance
+ifneq (,$(findstring milan, $(strip $(TARGET_PRODUCT))))
+ccflags-y += -DHP_IMPENDANCE
+endif
 ifeq ($(CONFIG_SND_SOC_MT6358),y)
   MTK_PLATFORM := $(subst ",,$(CONFIG_MTK_PLATFORM))
   subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include
