corfu: MTK-PATCH ISP-Drop frame[1/3]
[Solution]
ADD ISP_SET_VIR_CQCNT

Products:corfu / corfud / coful / milan

Change-Id: I00bca352480a15e7f9179fd5080ff10d80106a24
Signed-off-by: huangdra <huangdra@motorola.com>
Reviewed-on: https://gerrit.mot.com/2032800
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -1,6 +1,12 @@
 # SPDX-License-Identifier: GPL-2.0
 menu "Device Drivers"
 
+
+config MOTO_MTK_PATCH
+        bool "Define for mtk patch about camera"
+        help
+          Say Y here for submiting by moto
+
 source "drivers/amba/Kconfig"
 
 source "drivers/base/Kconfig"
