--- a/arch/arm64/configs/ext_config/moto-k69v1_64_6382-milan.config
+++ b/arch/arm64/configs/ext_config/moto-k69v1_64_6382-milan.config
@@ -49,3 +49,4 @@ CONFIG_SND_SOC_AW883XX=y
 CONFIG_MTK_MT6382_BDG=y
 CONFIG_MTK_MT6382_BDG_BUF7=y
 CONFIG_MTK_BIAS_BL_FEATURE=y
+CONFIG_MOTO_MTK_PATCH=y
