update AF driver setting[1/2]
milan:
--add milan add dw9800v  driver
--update dw9714 init setting

coful：
--Modify the dw9800v init setting delay

Change-Id: Ie505b213f3bd90ba2090d5caebbefd83e7ed7c48
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2036730
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/lens/main3/Makefile
+++ b/drivers/misc/mediatek/lens/main3/Makefile
@@ -42,5 +42,6 @@ obj-y += common/bu24253af/
 obj-y += common/gt9772af/
 obj-y += common/mot_dw9714vaf/
 obj-y += common/dw9714af/
+obj-y += common/mot_milan_dw9714af/
 
 endif
