--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -833,4 +833,10 @@ config MTK_DISABLE_BAT_HIGH_TEMP_PROTECT
 	  Set YES to disable hight temperature protect
 	  set No to enable hight temperature protect
 
+config PD_HARDRESET_HND
+        bool "PD HARDRESET handle"
+        default n
+	help
+	  Say Y here to enable PD Hardreset ignore
+
 endif # POWER_SUPPLY
