--- a/arch/arm64/configs/ext_config/moto-k69v1_64_6382-milan.config
+++ b/arch/arm64/configs/ext_config/moto-k69v1_64_6382-milan.config
@@ -52,3 +52,11 @@ CONFIG_MTK_MT6382_BDG_BUF7=y
 CONFIG_MTK_BIAS_BL_FEATURE=y
 CONFIG_MOTO_MTK_PATCH=y
 CONFIG_I2C_CHARDEV=y
+# CONFIG_CUSTOM_KERNEL_SENSOR_FUSION is not set
+# CONFIG_CUSTOM_KERNEL_UNCALI_ACC_SENSOR is not set
+# CONFIG_CUSTOM_KERNEL_UNCALI_GYRO_SENSOR is not set
+# CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR is not set
+# CONFIG_MTK_UNCALI_ACCHUB is not set
+# CONFIG_MTK_UNCALI_GYROHUB is not set
+# CONFIG_MTK_UNCALI_MAGHUB is not set
+# CONFIG_MTK_MOTION_DETECT_HUB is not set
