optimizate swtp gpio state project build macro
WHY:swtp gpio state macro has issue for other project
HOW: redefine swtp gpio state project build macro

Change-Id: I2efbd608ccf73921d945dfeafa4e0a69be12b833
Signed-off-by: longch56 <longch56@motorola.com>
Reviewed-on: https://gerrit.mot.com/2043466
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shuxian Zhang <zhangsx1@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/port/Makefile
+++ b/drivers/misc/mediatek/eccci/port/Makefile
@@ -47,8 +47,14 @@ ccflags-y += -DKYOTO_SWTP_CUST
 endif
 
 # Add for corfu series
-ifeq ($(filter corfu cofud coful milan,$(TARGET_PRODUCT)),)
-ccflags-y += -DSWTP_GPIO_STATE_CUST
+ifeq ($(findstring corfu,$(TARGET_PRODUCT)), corfu)
+ccflags-y += -DCORFU_SWTP_GPIO_STATE_CUST
+else ifeq ($(findstring cofud,$(TARGET_PRODUCT)), cofud)
+ccflags-y += -DCOFUD_SWTP_GPIO_STATE_CUST
+else ifeq ($(findstring coful,$(TARGET_PRODUCT)), coful)
+ccflags-y += -DCOFUL_SWTP_GPIO_STATE_CUST
+else ifeq ($(findstring milan,$(TARGET_PRODUCT)), milan)
+ccflags-y += -DMILAN_SWTP_GPIO_STATE_CUST
 endif
 
 # Disable SWTP on factory version for lisbon, keep MTK default logic for customer version
