arm64/dt: initial set of dts files for tesla
Initial set of dts files added to support EVB hw, mt6879-moto-common-overlay.dtsi
is copied from k6879v1_64.dts and latest change:
f5aeaf41a2d0 [ALPS06240466] arm64: dts: mt6879: Enable wifi Qorvo eFEM close-loop

Change-Id: I8b875e49edaa2c922d8949a7c18cf0f03ff47d55
Reviewed-on: https://gerrit.mot.com/2130508
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -11060,3 +11060,5 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 #include "mediatek/mt6879-clkitg.dtsi"
 #include "mediatek/mt6879-disable-unused.dtsi"
 #include "mediatek/trusty.dtsi"
+/* Motorola base dts override */
+#include "mediatek/mt6879-moto-base.dtsi"
