--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -3913,6 +3913,7 @@
 		/* Trustonic Mobicore SW IRQ number 149 = 32 + 117 */
 		mobicore: mobicore {
 			compatible = "trustonic,mobicore";
+			trustonic,real-drv = <1>;
 			interrupts = <GIC_SPI 117 IRQ_TYPE_EDGE_RISING 0>;
 		};
 
