arm64/dts: tesla: add the panel config.
1.Dsi send dcs command to set backlight
2. Pull up gpio to enable bias for panel

Change-Id: I42e320caad8929feaa3631a45f45045288b4a027
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2135384
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -13,3 +13,4 @@
 #include "mediatek/mt6879-moto-common-overlay.dtsi"
 #include "mediatek/cust_mt6879_touch_1080x2400.dtsi"
 #include "mediatek/cust_mt6879_camera_v4l2.dtsi"
+#include "mediatek/tesla-display.dtsi"
