ext_config: Support fscrypt V2 HWKM wrapped key mode.
Change-Id: Ie70c8b13ed3e89ea522c51d5f65fef4d3e61be3a
Signed-off-by: quebs2 <quebs2@motorola.com>
Reviewed-on: https://gerrit.mot.com/2136116
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
@@ -13,3 +13,6 @@
 # You can check the .config file to verify that your configuration option is
 # being set as expected.
 #
+
+# Enable fscrypt V2 wrapped key mode.
+CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT=y
