--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -14,3 +14,25 @@
 # being set as expected.
 #
 
+# CONFIG_DRM_PANEL_TRULY_TD4330_VDO is not set
+# CONFIG_DRM_PANEL_TRULY_TD4330_CMD is not set
+# CONFIG_DRM_PANEL_TRULY_FT8756_VDO is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO is not set
+# CONFIG_DRM_PANEL_SC_NT36672C_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_NT36672E_VDO_120HZ_HFP is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_CPHY_VDO is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_60HZ is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S68FC01_VDO_AOD is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_HFP is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ_HFP is not set
+# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD is not set
+# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD_120HZ is not set
+# CONFIG_DRM_PANEL_TRULY_NT35595_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
+CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
+# CONFIG_RT4831A_I2C is not set
