kernel-5.1/drm: add the new panel driver(tm+nt37701A)
1.tianma + nt37701A + 655 + 1080*2400
2.Tesla will use this panel.

Change-Id: I4ab7a9a25fdadba04694525d1f1182677472c7bf
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2136225
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -821,6 +821,17 @@ config DRM_PANEL_NT37801_MSYNC2_RTE
 	  and uses 24-bits RGB per pixel. It provides a MIPI DSI
 	  interface to host.
 
+config DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ
+	tristate "TIANMA 1080*2400 DSC DPHY CMD MODE 144HZ PANEL"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for TIANMA NT7701A DSC
+	  DPHY cmd mode Full HD Plus 144HZ panel. The panel has a 1080x2400
+	  resolution and uses 30-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
 	depends on OF
