--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -11,6 +11,6 @@
  */
 
 #include "mediatek/mt6879-moto-common-overlay.dtsi"
-#include "mediatek/cust_mt6879_touch_1080x2400.dtsi"
+#include "mediatek/tesla-touch.dtsi"
 #include "mediatek/cust_mt6879_camera_v4l2.dtsi"
 #include "mediatek/tesla-display.dtsi"
