testla: add wl2864c driver[2/3]
testla: :
--testla: add wl2864c driver

Change-Id: Iab0bbce895d0bbc49b99d3fc14a2918394b33c38
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2140730
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: <zhaos2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -35,4 +35,8 @@
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
 CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
+CONFIG_OF_GPIO=y
+#add for i2c tool
+CONFIG_I2C_CHARDEV=y
+CONFIG_MOTO_WL2864C=m
 # CONFIG_RT4831A_I2C is not set
