--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -12,5 +12,6 @@
 
 #include "mediatek/mt6879-moto-common-overlay.dtsi"
 #include "mediatek/tesla-touch.dtsi"
-#include "mediatek/cust_mt6879_camera_v4l2.dtsi"
 #include "mediatek/tesla-display.dtsi"
+#include "mediatek/tesla-wl2864c.dtsi"
+#include "mediatek/cust_mt6879_camera_v4l2.dtsi"
