--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -15,3 +15,5 @@
 #include "mediatek/tesla-display.dtsi"
 #include "mediatek/tesla-wl2864c.dtsi"
 #include "mediatek/cust_mt6879_camera_v4l2.dtsi"
+#include "mediatek/tesla-charger.dtsi"
+
