arm64/dts: add egis fp node.
Tesla use egis sensor, based on vendor dts config and our HW config,
add egis dts node to bring up tesla fp.

Change-Id: I09aeb6da94842c76a4261a0c2642535e227b07eb
Reviewed-on: https://gerrit.mot.com/2144645
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -3007,7 +3007,7 @@
 		pmic_register = <0xa0d>;
 	};
 
-	soc {
+	soc: soc {
 		#address-cells = <2>;
 		#size-cells = <2>;
 		compatible = "simple-bus";
