--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -44,3 +44,81 @@
 		 sound-dai = <&aw882xx_smartpa_0 &aw882xx_smartpa_1>;
 	};
 };
+
+/* FINGERPRINT start */
+&spi0 {
+	fingerprint@0 {
+		compatible = "mediatek,fingerprint";
+		reg = <0>;
+		spi-max-frequency = <8000000>;
+		status = "okay";
+	};
+};
+
+&soc {
+	fp_egistec {
+		compatible = "fp-egistec";
+		interrupt-parent = <&pio>;
+		interrupts = <24 IRQ_TYPE_EDGE_RISING 24 0>;
+
+		fp-ctrl-power;
+
+		egistec,gpio_reset = <&pio 7 0x0>;
+		egistec,gpio_irq = <&pio 24 0x0>;
+
+		vcc_fp-supply = <&mt6368_vfp>;	// ldo for support module vcc
+		egis-fp,vcc-voltage = <3000000 3000000>;	// ldo voltage default 3.3V
+		egis-fp,vcc-current = <100000>;
+
+		pinctrl-names = "egis_rst_high", "egis_rst_low", "egis_irq_active", "egis_spi_active", "egis_spi_default";
+		pinctrl-0 = <&fingerfp_rst_high>;
+		pinctrl-1 = <&fingerfp_rst_low>;
+		pinctrl-2 = <&fingerfp_irq_active>;
+		pinctrl-3 = <&fingerfp_spi_active>;
+		pinctrl-4 = <&fingerfp_spi_default>;
+
+		status="okay";
+	};
+};
+
+&pio {
+
+	fingerfp_rst_high: fingerfp_rst_high {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
+			slew-rate = <1>;
+			output-high;
+		};
+	};
+
+	fingerfp_rst_low: fingerfp_rst_low {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO7__FUNC_GPIO7>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+
+	fingerfp_irq_active: fingerfp_irq_active {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO24__FUNC_GPIO24>;
+			slew-rate = <0>;
+			bias-disable;
+		};
+	};
+
+	fingerfp_spi_active: fingerfp_spi_active {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO66__FUNC_SCP_SPI0_MI>, <PINMUX_GPIO64__FUNC_SCP_SPI0_CS>, <PINMUX_GPIO65__FUNC_SCP_SPI0_MO>, <PINMUX_GPIO63__FUNC_SCP_SPI0_CK>;
+			drive-strength = <2>;
+		};
+	};
+
+	fingerfp_spi_default: fingerfp_spi_default {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO66__FUNC_GPIO66>, <PINMUX_GPIO64__FUNC_GPIO64>, <PINMUX_GPIO65__FUNC_GPIO65>, <PINMUX_GPIO63__FUNC_GPIO63>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+};
