--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -366,44 +366,44 @@
 #endif
 	camera_pins_cam2_mclk_off: camera_pins_cam2_mclk_off {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO100__FUNC_GPIO100>;
+			pinmux = <PINMUX_GPIO101__FUNC_GPIO101>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam2_mclk_2ma: camera_pins_cam2_mclk_2ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO100__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
 			drive-strength = <0>;
 		};
 	};
 	camera_pins_cam2_mclk_4ma: camera_pins_cam2_mclk_4ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO100__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam2_mclk_6ma: camera_pins_cam2_mclk_6ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO100__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
 			drive-strength = <2>;
 		};
 	};
 	camera_pins_cam2_mclk_8ma: camera_pins_cam2_mclk_8ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO100__FUNC_CMMCLK1>;
+			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
 			drive-strength = <3>;
 		};
 	};
 	camera_pins_cam2_rst_0: cam2@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO31__FUNC_GPIO31>;
+			pinmux = <PINMUX_GPIO34__FUNC_GPIO34>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam2_rst_1: cam2@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO31__FUNC_GPIO31>;
+			pinmux = <PINMUX_GPIO34__FUNC_GPIO34>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -603,18 +603,12 @@
 	clock-frequency = <400000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
-	//DEPTH
-	mtk_camera_eeprom2:camera_eeprom2@51 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x51>;
-		status = "okay";
-	};
 
-	sensor2: sensor2@1a {
+	//DEPTH
+	sensor2: sensor2@6e {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "s5k3m5sx_mipi_raw",
-				"imx766dual_mipi_raw";
-		reg = <0x1a>;
+		sensor-names = "mot_dubai_gc02m1b_mipi_raw";
+		reg = <0x6e>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
 				"mclk_2mA",
@@ -631,10 +625,8 @@
 		pinctrl-5 = <&camera_pins_cam2_rst_0>;
 		pinctrl-6 = <&camera_pins_cam2_rst_1>;
 
-		avdd-supply = <&rt5133_ldo6>;
-		dvdd-supply = <&rt5133_ldo7>;
-		dovdd-supply = <&rt5133_ldo1>;
-		afvdd-supply = <&rt5133_ldo2>;
+		avdd-supply = <&cam_uw_fm_avdd_ldo>;
+		dovdd-supply = <&cam_iovdd_ldo>;
 
 		clocks = <&topckgen_clk CLK_TOP_UNIVPLL_192M_D32>,
 			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D16>,
@@ -644,7 +636,7 @@
 			<&topckgen_clk CLK_TOP_UNIVPLL_D6_D16>,
 			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D4>,
 			<&topckgen_clk CLK_TOP_UNIVPLL_D6_D8>,
-			<&topckgen_clk CLK_TOP_CAMTG2_SEL>;
+			<&topckgen_clk CLK_TOP_CAMTG3_SEL>;
 		clock-names = "6", "12", "13", "19.2", "24", "26", "48", "52", "mclk";
 		status = "okay";
 
