tesla: wlan module bringup
enable wlan fem control pins;
enbale RF cable det pin;

Change-Id: Ia7dc31de122c99d57c4942e7890b047abbc0de33
Reviewed-on: https://gerrit.mot.com/2146085
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -16,4 +16,5 @@
 #include "mediatek/tesla-wl2864c.dtsi"
 #include "mediatek/cust_mt6879_camera_v4l2.dtsi"
 #include "mediatek/tesla-charger.dtsi"
+#include "mediatek/tesla-connsys.dtsi"
 
