dts:dubai+:add smart pa dts config
Dubai+ use mt6879 platform + 2 aw88261acf smart pa.
add smart pa dts config.

Change-Id: I021a56d61dfbd696bc095375120542e900164c0f
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2146205
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -18,3 +18,29 @@
 #include "mediatek/tesla-charger.dtsi"
 #include "mediatek/tesla-connsys.dtsi"
 
+&i2c6 {
+    aw882xx_smartpa_0: aw882xx@34 {
+        compatible = "awinic,aw882xx_smartpa";
+        #sound-dai-cells = <0>;
+        reg = <0x34>;
+        irq-gpio = <&pio 4 0x0>;
+        sound-channel = <0>;
+        status = "okay";
+    };
+
+    aw882xx_smartpa_1: aw882xx@35 {
+        compatible = "awinic,aw882xx_smartpa";
+        #sound-dai-cells = <0>;
+        reg = <0x35>;
+        irq-gpio = <&pio 62 0x0>;
+        sound-channel = <1>;
+        status = "okay";
+    };
+};
+
+&sound {
+	mediatek,spk-i2s = <1 11>;
+	mediatek,speaker-codec {
+		 sound-dai = <&aw882xx_smartpa_0 &aw882xx_smartpa_1>;
+	};
+};
