--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
@@ -17,6 +17,19 @@
 #include <dt-bindings/phy/phy.h>
 #include <dt-bindings/iio/mt635x-auxadc.h>
 
+&odm {
+	utags {
+		compatible = "mmi,utags";
+		mmi,main-utags = "/dev/block/by-name/utags";
+		mmi,backup-utags = "/dev/block/by-name/utagsBackup";
+	};
+	hw {
+		compatible = "mmi,utags";
+		mmi,dir-name = "hw";
+		mmi,main-utags = "/dev/block/by-name/hw";
+	};
+};
+
 &chosen {
 	bootargs_ext = "console=tty0 root=/dev/ram \
 	loglevel=8 \
