--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -39,6 +39,7 @@ CONFIG_OF_GPIO=y
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_hi1336_mipi_raw"
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
