dst/panel: tesla: enable "force_dyn_mipi_change"
Enable "force_dyn_mipi_change", that can reduce the clock frequence
for low refresh rate. that can reduce power connsumption.

Change-Id: I142eb7175497a4104e16052e351975680a9215d8
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2150757
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -10,6 +10,10 @@
  * GNU General Public License for more details.
  */
 
+&dispsys_config {
+	force_dyn_mipi_change;
+};
+
 &mtk_leds {
 	/delete-property/ compatible;
 	/delete-property/ led_mode;
