--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -7,89 +7,6 @@
 			remote-endpoint = <&main_af>;
 		};
 	};
-	port@1 {
-		main_af_cam1_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam1>;
-		};
-	};
-	port@2 {
-		main_af_cam2_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam2>;
-		};
-	};
-	port@3 {
-		main_af_cam3_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam3>;
-		};
-	};
-	port@4 {
-		main_af_cam4_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam4>;
-		};
-	};
-	port@5 {
-		main_af_cam5_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam5>;
-		};
-	};
-	port@6 {
-		main_af_cam6_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam6>;
-		};
-	};
-	port@7 {
-		main_af_cam7_endpoint: endpoint {
-			remote-endpoint = <&main_af_cam7>;
-		};
-	};
-};
-
-&i2c2 {
-	camera_af_main_three@0e {
-		compatible = "mediatek,gt9772b";
-		reg = <0x0e>;
-		vin-supply = <&rt5133_gpio1>;
-		port {
-			main_af_cam3: endpoint {
-				remote-endpoint = <&main_af_cam3_endpoint>;
-			};
-		};
-	};
-
-	camera_af_main_three@2a {
-		compatible = "mediatek,bu64253gwz";
-		reg = <0x2a>;
-		vin-supply = <&rt5133_gpio1>;
-		port {
-			main_af_cam7: endpoint {
-				remote-endpoint = <&main_af_cam7_endpoint>;
-			};
-		};
-	};
-};
-
-&i2c4 {
-	camera_af_main_two@0d {
-		compatible = "mediatek,gt9772a";
-		reg = <0x0d>;
-		vin-supply = <&rt5133_ldo2>;
-		port {
-			main_af_cam2: endpoint {
-				remote-endpoint = <&main_af_cam2_endpoint>;
-			};
-		};
-	};
-
-	camera_af_main_two@2b {
-		compatible = "mediatek,ak7375c";
-		reg = <0x2b>;
-		vin-supply = <&rt5133_ldo2>;
-		port {
-			main_af_cam6: endpoint {
-				remote-endpoint = <&main_af_cam6_endpoint>;
-			};
-		};
-	};
 };
 
 &i2c6 {
@@ -128,46 +45,13 @@
 };
 
 &i2c8 {
-	camera_af_main@72 {
-		compatible = "mediatek,lc898229";
-		reg = <0x72>;
-		vin-supply = <&rt5133_ldo3>;
+	camera_af_main@18 {
+		compatible = "mediatek,mot_dubai_dw9800v";
+		reg = <0x18>;
+		vin-supply = <&cam_main_uw_afvdd_ldo>;
 		port {
 			main_af: endpoint {
 				remote-endpoint = <&main_af_endpoint>;
-			};
-		};
-	};
-
-	camera_af_main@0c {
-		compatible = "mediatek,gt9764";
-		reg = <0x0c>;
-		vin-supply = <&rt5133_ldo3>;
-		port {
-			main_af_cam1: endpoint {
-				remote-endpoint = <&main_af_cam1_endpoint>;
-			};
-		};
-	};
-
-	camera_af_main@0f {
-		compatible = "mediatek,dw9800w";
-		reg = <0x0f>;
-		vin-supply = <&rt5133_ldo3>;
-		port {
-			main_af_cam4: endpoint {
-				remote-endpoint = <&main_af_cam4_endpoint>;
-			};
-		};
-	};
-
-	camera_af_main@0a {
-		compatible = "mediatek,ak7377a";
-		reg = <0x0a>;
-		vin-supply = <&rt5133_ldo3>;
-		port {
-			main_af_cam5: endpoint {
-				remote-endpoint = <&main_af_cam5_endpoint>;
 			};
 		};
 	};
