arm64/dts: ov32c bring up[6/7]
tesla:
-- ov32c bring up

Change-Id: I69999c7905e12757d0b8edd98bd72965e4e03ed7
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2145001
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: <buyan1@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -220,14 +220,14 @@
 	};
 	camera_pins_cam1_rst_0: cam1@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO30__FUNC_GPIO30>;
+			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam1_rst_1: cam1@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO30__FUNC_GPIO30>;
+			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -433,10 +433,10 @@
 		status = "okay";
 	};
 
-	sensor1: sensor1@10 {
+	sensor1: sensor1@20 {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "s5k3p9sp_mipi_raw";
-		reg = <0x10>;
+		sensor-names = "mot_dubai_ov32c_mipi_raw";
+		reg = <0x20>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
 				"mclk_2mA",
@@ -452,14 +452,10 @@
 		pinctrl-4 = <&camera_pins_cam1_mclk_8ma>;
 		pinctrl-5 = <&camera_pins_cam1_rst_0>;
 		pinctrl-6 = <&camera_pins_cam1_rst_1>;
-#if 0
-		pinctrl-7 = <&camera_pins_cam1_pdn_0>;
-		pinctrl-8 = <&camera_pins_cam1_pdn_1>;
-#endif
-		avdd-supply = <&rt5133_ldo6>;
-		dvdd-supply = <&rt5133_ldo7>;
-		dovdd-supply = <&rt5133_ldo1>;
-		afvdd-supply = <&rt5133_ldo2>;
+
+		avdd-supply = <&cam_uw_fm_avdd_ldo>;
+		dvdd-supply = <&cam_uw_fm_dvdd_ldo>;
+		dovdd-supply = <&cam_iovdd_ldo>;
 
 		clocks = <&topckgen_clk CLK_TOP_UNIVPLL_192M_D32>,
 			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D16>,
