tesla: ov32c bring up[7/7]
tesla:
-- ov32c bring up

Change-Id: I0080a0370626179d60e135569ccb5deb2af51b46
Signed-off-by: wangzl37 <wangzl37@motorola.com>
Reviewed-on: https://gerrit.mot.com/2145004
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: <buyan1@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -39,7 +39,7 @@ CONFIG_OF_GPIO=y
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_hi1336_mipi_raw mot_dubai_gc02m1b_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_hi1336_mipi_raw mot_dubai_gc02m1b_mipi_raw mot_dubai_ov32c_mipi_raw"
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
