arm64/config:charger tcmd config macro
charger tcmd:
enable tcmd driver build controller macro

Change-Id: I0bc8bfd987e58b5bee084d71cc2d9c3367c58a3e
Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2153166
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -43,3 +43,4 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_hi1336_mipi_raw mot_dubai_gc02m1b_mipi
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
+CONFIG_MOTO_CHG_TCMD_SUPPORT=m
