charger:add charger tcmd driver part
charger tcmd:
porting tcmd driver from mt6853/mt6833

Change-Id: I3a02a519dce7da526524c945b50c95453c37c201
Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2153173
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -818,6 +818,11 @@ config CHARGER_MT6375
 	  The device is compliant with the USB Battery Charging Specification
 	  Revision 1.2.
 
+config MOTO_CHG_TCMD_SUPPORT
+	tristate "MOTO TCMD interface driver for charger"
+	help
+	  This is to enable MOTO supports of charger TCMD INTERFACE.
+
 config GAUGE_MT6375
 	tristate "MT6375 fuel gauge driver"
 	depends on MFD_MT6375
