--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -10,14 +10,10 @@
 };
 
 &i2c6 {
-	lm3644:lm3644@63 {
-		compatible = "mediatek,lm3644";
+	aw36515:aw36515@63 {
+		compatible = "mediatek,aw36515";
 		reg = <0x63>;
 		#cooling-cells = <2>;
-		pinctrl-names = "default", "hwen_high", "hwen_low";
-		pinctrl-0 = <&lm3644_pins_default>;
-		pinctrl-1 = <&lm3644_pins_hwen_high>;
-		pinctrl-2 = <&lm3644_pins_hwen_low>;
 		status = "okay";
 		flash@0{
 			reg = <0>;
@@ -58,24 +54,7 @@
 };
 
 &pio {
-	lm3644_pins_default: default {
-	};
 
-	lm3644_pins_hwen_high: hwen_high {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO188__FUNC_GPIO188>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-
-	lm3644_pins_hwen_low: hwen_low {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO188__FUNC_GPIO188>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
 };
 
 &mtk_composite_v4l2_1 {
