arm64/dt: tesla: config vibrator device node
Disable the default vibrator of mtk and
config the awinic vibrator device node.

Change-Id: Ia1c8b8b69eff70e7cb26797256c20b7a12ab60b7
Signed-off-by: wuwl10 <wuwl10@motorola.com>
Reviewed-on: https://gerrit.mot.com/2153951
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -5634,7 +5634,7 @@
 			iommus = <&apu_iommu0 M4U_LARB34_APU_CODE>;
 		};
 
-		regulator_vibrator {
+		regulator_vibrator: regulator_vibrator {
 			compatible = "regulator-vibrator";
 			label = "vibrator";
 			min-volt = <2800000>;
