dts:Tesla:config fsa4480_switch chip
tesla use fsa4480 as typec analog headset switch chip.
config dts.

Change-Id: Ida869d66910c4788c774bdf7ec78c49e36363fd3
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2155034
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -36,6 +36,11 @@
         sound-channel = <1>;
         status = "okay";
     };
+
+    fsa4480_switch: fsa4480@42 {
+        compatible = "fsa,fsa4480-i2c";
+        reg = <0x42>;
+    };
 };
 
 &sound {
