configs:Tesla:config fsa4480_switch chip
tesla use fsa4480 as typec analog headset switch chip.
add macro.

Change-Id: Ifa551cf243e12375dbce91a9781e93007b1fee66
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2155037
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -44,4 +44,5 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_ov50a_mipi_raw mot_dubai_ov32c_mipi_ra
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
+CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_CHG_TCMD_SUPPORT=m
