sound:add fsa4480_switch logic for accdet
tesla use fsa4480 as typec analog headset switch chip.
add fsa4480_switch logic for accdet.

Change-Id: I61acbb94fef965cd7fb5426eeb39a8a65a897002
Signed-off-by: liaohj <liaohj@mt.com>
Reviewed-on: https://gerrit.mot.com/2155045
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wanlong Zhou <zhouwl@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1936,4 +1936,8 @@ config SND_SOC_TPA6130A2
 	tristate "Texas Instruments TPA6130A2 headphone amplifier"
 	depends on I2C
 
+config TYPEC_FSA4480
+	tristate "fsa4480 for typec analog headset"
+	depends on I2C
+
 endmenu
